--- a/css/styles.css
+++ b/css/styles.css
@@ -38,20 +38,32 @@ body {
   padding: 10px; }
 
 .carousel {
-  background: #512DA8; 
-}
-.carousel .carousel-item {
-  height: 300px; 
-}
-.carousel .carousel-item img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-height: 300px;
-}
+  background: #512DA8; }
+  .carousel .carousel-item {
+    height: 300px; }
+    .carousel .carousel-item img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      min-height: 300px; }
 
 #carouselButton {
   right: 0px;
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+#loginButton:hover {
+  cursor: pointer;
+  text-decoration: underline; }
+
+.modal-content {
+  border: 0px; }
+  .modal-content .modal-body {
+    background-color: #9575CD; }
+  .modal-content .modal-header {
+    background-color: #512DA8;
+    color: floralwhite;
+    border: 0px; }
+    .modal-content .modal-header .close {
+      color: floralwhite; }
